--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,6 +18,7 @@
         <Company>Chaotic Minds</Company>
         <NeutralLanguage>en</NeutralLanguage>
         <Copyright>Copyright @ Sichi 2018-2023</Copyright>
+        <PackageProjectUrl>https://docs.chaos-server.net/</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Sichii/Chaos-Server</RepositoryUrl>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
