--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,11 +2,11 @@ name: Docs
 on:
   push:
     branches:
-      - master
+      - release/v*
   pull_request:
     branches:
-      - master
-  workflow_dispatch:
+      - release/v*
+
 jobs:
   publish-docs:
     if: github.repository == 'Sichii/Chaos-Server'
