--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build-and-publish:
     if: github.repository == 'Sichii/Chaos-Server'
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v3
