--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.x'  # Set your .NET Core version here
