--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Publish to NuGet
         run: |
-          dotnet nuget push "nupkgs/**/*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
-          dotnet nuget push "nupkgs/**/*.snupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
+          dotnet nuget push "nupkgs/**/*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json --skip-duplicate
+          dotnet nuget push "nupkgs/**/*.snupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json --skip-duplicate
