Changed max level for base class and advanced class, added all the maps with reactors for porte forest

--- a/Chaos/appsettings.json
+++ b/Chaos/appsettings.json
@@ -197,9 +197,9 @@
         "Port": 4201
       },
       "LootDropsLockToRewardTargetSecs": 30,
-      "GroundItemDespawnTimeMins": 120,
+      "GroundItemDespawnTimeMins": 180,
       "RefreshIntervalMs": 1000,
-      "ClearOrangeBarTimerSecs": 15,
+      "ClearOrangeBarTimerSecs": 10,
       "SleepAnimationTimerMins": 5,
       "TradeRange": 4,
       "DropRange": 4,
@@ -212,7 +212,8 @@
       "MaximumMonsterAc": 100,
       "MinimumAislingAc": -90,
       "MaximumAislingAc": 100,
-      "MaxLevel": 30,
+      "BaseClassMaxLevel": 50,
+      "AdvancedClassMaxLevel": 99,
       "MaxActionsPerSecond": 10,
       "MaxSkillsPerSecond": 5,
       "MaxSpellsPerSecond": 3,
